--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- Bootstrap styles -->
     <link href="giaodien/css/bootstrap.css" rel="stylesheet"/>
-    <!-- Customize styles -->
     <link href="giaodien/stylecss/style.css" rel="stylesheet"/>
-    <!-- font awesome styles -->
 	<link href="giaodien/font-awesome/css/font-awesome.css" rel="stylesheet">
   </head>
 <body>
 <!-- 
-	Upper Header Section 
+	Phần tiêu đề trên 
 -->
 
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -36,7 +33,7 @@
 </div>
 
 <!--
-Lower Header Section 
+Phần dưới tiêu đề 
 -->
 <div class="container">
 <div id="gototop"> </div>
@@ -45,7 +42,7 @@ Lower Header Section
 </header>
 
 <!--
-Navigation Bar Section 
+Phần thanh điều hướng 
 -->
 	<div class="container">
 	  <div id="menu">
@@ -54,7 +51,7 @@ Navigation Bar Section
 			  <li><a href="#">GIỚI THIỆU</a></li>
 			  <li><a href="admin/khoa/danhsachkhoa.php">KHOA</a></li>
 			  <li><a href="admin/loginsv.php">TRA CỨU ĐIỂM</a></li>
-			  <li><a href="#">ĐIỂM RÈN LUYỆN</a></li>
+			  <li><a href="thoikhoabieu.html">THỜI KHÓA BIỂU</a></li>
               <li><a href="#" class="show">LIÊN HỆ</a></li>
             </ul>
             <script language="javascript">  
@@ -191,7 +188,7 @@ Navigation Bar Section
 
 <!--Footer-->
 <footer class="footer">
-</div><!-- /container -->
+</div>
 
 <div class="copyright">
 <div class="container">
